compiler/tools/fpp-check/test/component_instance/undef_component.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_instance/undef_component.fpp: 1.13
instance c: C base id 0x100
            ^
error: undefined symbol C
